DOMjudge Programming Contest Judging System

Version 2.0.0 - SVN
-------------------
 - Minimum MySQL version required is now 4.1: simplify SQL privilege
   removal.
 - [INCOMPATIBLE CHANGE] Renamed judger to judgehost everywhere to
   remove ambiguity between human judges and judge computers.
 - Add numbering to scoreboard.
 - Make all cells in jury scoreboard links that refer to relevant
   data for that cell (Closes: #1582358).
 - Add affiliation icons to scoreboard (configurable). (Closes: #1355814).
 - Adapt and split sql script files to allow for easier upgrading and
   changing database name.
 - Fix possible buffer overflow in submitcommon.cc; Thanks to
   Lennert Buytenhek for pointing out.
 - Add option to commandline submit to use websubmit (Closes: #1582376)
   and use libcurl for that (Closes: #1626222).
 - Add unfreezetime field to contests which allows to display the final
   standings to teams and public, and a button to unfreeze right away
   (Closes: #1582370).
 - Add problem and team category colours to MySQL DB.
 - Add team summary to all main team pages.
 - Add check_float program to compare floating point output.
 - Parse validator XML output if xsltproc is available (Closes: #1238454).
 - Add more summary data to tables.
 - Fix clarification wrapping.
 - Fix some language typos.
 - Improve webinterface layout.
 - Add MySQL transactions; will provide extra safety when the table type
   supports it (otherwise does nothing).
 - Add IPv6 support to submit daemon/client. (Closes: #1576565).
 - Change scoreboard sorting to use ACM ICPC (tie-breaker) rules.
 - Added team information pages for teams and public and included team
   members field in the SQL 'team' table.
 - Unify documentation into an administrator's manual, a judgers manual
   and a team manual.
 - Balloon notifications can continue after scoreboard freeze, and will
   list all balloons a team is supposed to have.

Version 1.3.0 - 6 October 2006
------------------------------