@@ -77,12 +77,12 @@ function calcScoreRow($cid, $team, $prob) {
 	                  FROM judging
 	                  LEFT JOIN submission s USING(submitid)
 	                  LEFT OUTER JOIN contest c ON(c.cid=s.cid)
-	                  WHERE team = %s AND probid = %s AND valid = 1 AND
+	                  WHERE teamid = %s AND probid = %s AND valid = 1 AND
 	                  result IS NOT NULL AND s.cid = %i ORDER BY submittime',
 	                 $team, $prob, $cid);
 
 	$balloon = $DB->q('MAYBEVALUE SELECT balloon FROM scoreboard_jury
-                       WHERE cid = %i AND team = %s AND probid = %s',
+                       WHERE cid = %i AND teamid = %s AND probid = %s',
 	                  $cid, $team, $prob);
 	
 	if ( ! $balloon ) $balloon = 0;
@@ -124,13 +124,13 @@ function calcScoreRow($cid, $team, $prob) {
 
 	// insert or update the values in the jury scores table
 	$DB->q('REPLACE INTO scoreboard_jury
-	        (cid, team, probid, submissions, totaltime, penalty, is_correct, balloon)
+	        (cid, teamid, probid, submissions, totaltime, penalty, is_correct, balloon)
 	        VALUES (%i,%s,%s,%i,%i,%i,%i,%i)',
 	       $cid, $team, $prob, $submitted_p, $time_p, $penalty_p, $correct_p, $balloon);
 
 	// insert or update the values in the public/team scores table
 	$DB->q('REPLACE INTO scoreboard_public
-	        (cid, team, probid, submissions, totaltime, penalty, is_correct, balloon)
+	        (cid, teamid, probid, submissions, totaltime, penalty, is_correct, balloon)
 	        VALUES (%i,%s,%s,%i,%i,%i,%i,%i)',
 	       $cid, $team, $prob, $submitted_j, $time_j, $penalty_j, $correct_j, $balloon);
 
