@@ -6,6 +6,8 @@ Version 2.0.0 - SVN
    removal.
  - [INCOMPATIBLE CHANGE] Renamed judger to judgehost everywhere to
    remove ambiguity between human judges and judge computers.
+ - [INCOMPATIBLE CHANGE] Renamed team to teamid in database tables
+   refencing the 'team' table index 'login'.
  - Add numbering to scoreboard.
  - Make all cells in jury scoreboard links that refer to relevant
    data for that cell (Closes: #1582358).
